MDL-78813 gradereport_grader: Fixed help icon covering course average

--- a/grade/report/grader/styles.css
+++ b/grade/report/grader/styles.css
@@ -270,3 +270,14 @@
     width: 275px;
     max-height: 300px;
 }
+
+@media only screen and (min-width: 768px) {
+    .path-grade-report-grader .gradeparent table {
+        padding-right: 6em;
+        border-top-width: 0;
+    }
+
+    .path-grade-report-grader .gradeparent table tr:first-of-type th {
+        border-top-width: 1px;
+    }
+}
